--- a/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
@@ -37,6 +37,7 @@ NebulaGraph Operator supports enabling mTLS with certificate hot-reloading.
 
 The following provides examples of the cluster configuration file to enable mTLS between the client and the Graph service, and between services.
 
+ <!-- for 3.8.x and snapchat version, which includes the ssl_server_SAN field -->
 ??? info "View sample configurations of mTLS between services"
 
     ```yaml
@@ -45,6 +46,31 @@ The following provides examples of the cluster configuration file to enable mTLS
     metadata:
       name: nebula
     spec:
+      # # Required to enable backup and restore.
+      # enableBR: true
+      # # Customize Agent configurations for backup and restore.
+      # agent:
+      #   # Configure environment variables for the Agent component to obtain certificates.
+      #   env:
+      #   - name: CA_CERT_PATH
+      #     value: /usr/local/certs/root.crt
+      #   - name: CLIENT_CERT_PATH
+      #     value: /usr/local/certs/client.crt
+      #   - name: CLIENT_KEY_PATH
+      #     value: /usr/local/certs/client.key
+      #   # Customize the Agent image and version.
+      #   image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+      #   resources: {}
+      #   version: snap
+      #   # Limit the speed of file upload and download, in Mbps. The default value is 0, indicating no limit.
+      #   rateLimit: 0
+      #   # The connection timeout between the Agent and metad, in seconds. The default value is 60.
+      #   heartbeatInterval: 60
+      #   volumeMounts:
+      #   - mountPath: /usr/local/certs
+      #     name: credentials
+      # # Used to obtain the zone information about the node.
+      # alpineImage: "reg.vesoft-inc.com/vesoft/nebula-alpine:latest"
       exporter:
         image: vesoft/nebula-stats-exporter
         replicas: 1
@@ -53,17 +79,17 @@ The following provides examples of the cluster configuration file to enable mTLS
       sslCerts:
         # Certificates can be passed in by creating a Secret or 
         # by configuring environment variables in the Operator chart configuration file.
-        # Regardless of whether the certificate is passed in through Secret creation 
-        # or obtained locally through environment variables configuration,
-        # if no IP SAN is configured for the certificate,
-        # the value of `insecureSkipVerify` must be set to `true`.
-        insecureSkipVerify: true
         # The following fields are example configurations for passing in certificates by creating a Secret.
         # clientSecret: "client-cert"
         # clientCert: "tls.crt"
         # clientKey: "tls.key"
         # caSecret: "ca-cert" 
         # caCert: "tls.crt"
+        insecureSkipVerify: false # Whether the client verifies the server's certificate chain and hostname. Default is false.
+        # If `insecureSkipVerify` is set to `false`,
+        # either specify the server's hostname or IP of the server in the `subjectAltName` field of the server's certificate, 
+        # or specify the Subject Alternative Name (SAN) of the server in the following `serverName` field.
+        serverName: managed-graph-http2.nebula # The SAN of the server.
       graphd:
         config:
           # The following fields are used to enable mTLS between services.
@@ -79,6 +105,10 @@ The following provides examples of the cluster configuration file to enable mTLS
           # sync_meta_when_use_space: "true"
           # stick_to_intra_zone_on_failure: "false" 
           # session_reclaim_interval_secs: "300"
+          # The SAN of the server, which is used by other services to verify the server's hostname.
+          ssl_server_SAN: managed-graph-http2.nebula 
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs 
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -134,6 +164,10 @@ The following provides examples of the cluster configuration file to enable mTLS
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"  
+          # The SAN of the server, which is used by other services to verify the server's hostname.
+          ssl_server_SAN: managed-graph-http2.nebula
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -190,6 +224,10 @@ The following provides examples of the cluster configuration file to enable mTLS
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"  
+          # The SAN of the server, which is used by other services to verify the server's hostname.
+          ssl_server_SAN: managed-graph-http2.nebula
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -253,6 +291,257 @@ The following provides examples of the cluster configuration file to enable mTLS
       #   whenUnsatisfiable: "DoNotSchedule"
     ```
 
+
+ <!-- for 3.7.x version, which excludes the ssl_server_SAN field
+??? info "View sample configurations of mTLS between services"
+
+    ```yaml
+    apiVersion: apps.nebula-graph.io/v1alpha1
+    kind: NebulaCluster
+    metadata:
+      name: nebula
+    spec:
+      # # Required to enable backup and restore.
+      # enableBR: true
+      # # Customize Agent configurations for backup and restore.
+      # agent:
+      #   # Configure environment variables for the Agent component to obtain certificates.
+      #   env:
+      #   - name: CA_CERT_PATH
+      #     value: /usr/local/certs/root.crt
+      #   - name: CLIENT_CERT_PATH
+      #     value: /usr/local/certs/client.crt
+      #   - name: CLIENT_KEY_PATH
+      #     value: /usr/local/certs/client.key
+      #   # Customize the Agent image and version.
+      #   image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+      #   resources: {}
+      #   version: snap
+      #   # Limit the speed of file upload and download, in Mbps. The default value is 0, indicating no limit.
+      #   rateLimit: 0
+      #   # The connection timeout between the Agent and metad, in seconds. The default value is 60.
+      #   heartbeatInterval: 60
+      #   volumeMounts:
+      #   - mountPath: /usr/local/certs
+      #     name: credentials
+      # # Used to obtain the zone information about the node.
+      # alpineImage: "reg.vesoft-inc.com/vesoft/nebula-alpine:latest"
+      exporter:
+        image: vesoft/nebula-stats-exporter
+        replicas: 1
+        maxRequests: 20
+      # The certificate files for NebulaGraph Operator to access Storage and Meta services.
+      sslCerts:
+        # Certificates can be passed in by creating a Secret or 
+        # by configuring environment variables in the Operator chart configuration file.
+        # The following fields are example configurations for passing in certificates by creating a Secret.
+        # clientSecret: "client-cert"
+        # clientCert: "tls.crt"
+        # clientKey: "tls.key"
+        # caSecret: "ca-cert" 
+        # caCert: "tls.crt"
+        insecureSkipVerify: false # Whether the client verifies the server's certificate chain and hostname. Default is false.
+        # If `insecureSkipVerify` is set to `false`,
+        # either specify the server's hostname or IP of the server in the `subjectAltName` field of the server's certificate, 
+        # or specify the Subject Alternative Name (SAN) of the server in the following `serverName` field.
+        serverName: managed-graph-http2.nebula # The SAN of the server.
+      graphd:
+        config:
+          # The following fields are used to enable mTLS between services.
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true" 
+          # The following fields are required for creating a cluster with zones.
+          # accept_partial_success: "true"
+          # prioritize_intra_zone_reading: "true"
+          # sync_meta_when_use_space: "true"
+          # stick_to_intra_zone_on_failure: "false" 
+          # session_reclaim_interval_secs: "300"
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs 
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/xxx/xxx
+        version: v3.5.0-sc
+      metad:
+        config:
+          # Zone names CANNOT be modified once set.
+          # It's suggested to set an odd number of zones.
+          # zone_list: az1,az2,az3 
+          # Whether to enable the timestamp validation of the session.
+          validate_session_timestamp: "true"
+          # The following fields are used to enable mTLS between services.
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"  
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        licenseManagerURL: "192.168.8.xx:9119"
+        resources:
+          requests:
+            cpu: "300m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/xxx/xxx
+        version: v3.5.0-sc
+        dataVolumeClaim:
+          resources:
+            requests:
+              storage: 2Gi
+          storageClassName: local-path
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+      storaged:
+        config:
+          # The following fields are used to enable mTLS between services.
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"  
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs
+        initContainers:
+          - name: init-auth-sidecar
+            command:
+              - /bin/sh
+              - -c
+            args:
+              - cp /certs/* /credentials/
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        sidecarContainers:
+          - name: auth-sidecar
+            imagePullPolicy: Always
+            image: reg.vesoft-inc.com/xxx/xxx:latest
+            volumeMounts:
+              - name: credentials
+                mountPath: /credentials
+        volumes:
+          - name: credentials
+            emptyDir:
+              medium: Memory
+        volumeMounts:
+          - name: credentials
+            mountPath: /usr/local/nebula/certs
+        resources:
+          requests:
+            cpu: "300m"
+            memory: "500Mi"
+          limits:
+            cpu: "1"
+            memory: "1Gi"
+        replicas: 1
+        image: reg.vesoft-inc.com/xxx/xxx
+        version: v3.5.0-sc
+        dataVolumeClaims:
+          - resources:
+              requests:
+                storage: 2Gi
+            storageClassName: local-path
+        logVolumeClaim:
+          resources:
+            requests:
+              storage: 1Gi
+          storageClassName: local-path
+        # Automatically balance storage data after scaling out. 
+        # enableAutoBalance: true
+      reference:
+        name: statefulsets.apps
+        version: v1
+      schedulerName: nebula-scheduler
+      imagePullPolicy: Always
+      imagePullSecrets:
+        - name: nebula-image
+      # Whether to automatically delete PVCs when deleting a cluster.
+      # enablePVReclaim: true
+      # Used to evenly distribute Pods across zones.
+      # topologySpreadConstraints:
+      # - topologyKey: "kubernetes.io/zone"
+      #   whenUnsatisfiable: "DoNotSchedule"
+    ```    
+-->
+
+
 ??? info "View sample configurations of mTLS between the client and the Graph service"
 
     ```yaml
@@ -261,6 +550,31 @@ The following provides examples of the cluster configuration file to enable mTLS
     metadata:
       name: nebula
     spec:
+      # # Required to enable backup and restore.
+      # enableBR: true
+      # # Customize Agent configurations for backup and restore.
+      # agent:
+      #   # Configure environment variables for the Agent component to obtain certificates.
+      #   env:
+      #   - name: CA_CERT_PATH
+      #     value: /usr/local/certs/root.crt
+      #   - name: CLIENT_CERT_PATH
+      #     value: /usr/local/certs/client.crt
+      #   - name: CLIENT_KEY_PATH
+      #     value: /usr/local/certs/client.key
+      #   # Customize the Agent image and version.
+      #   image: reg.vesoft-inc.com/cloud-dev/nebula-agent
+      #   resources: {}
+      #   version: snap
+      #   # Limit the speed of file upload and download, in Mbps. The default value is 0, indicating no limit.
+      #   rateLimit: 0
+      #   # The connection timeout between the Agent and metad, in seconds. The default value is 60.
+      #   heartbeatInterval: 60
+      #   volumeMounts:
+      #   - mountPath: /usr/local/certs
+      #     name: credentials
+      # # Used to obtain the zone information about the node.    
+      # alpineImage: "reg.vesoft-inc.com/vesoft/nebula-alpine:latest"    
       exporter:
         image: vesoft/nebula-stats-exporter
         replicas: 1
@@ -279,6 +593,8 @@ The following provides examples of the cluster configuration file to enable mTLS
           # sync_meta_when_use_space: "true"
           # stick_to_intra_zone_on_failure: "false" 
           # session_reclaim_interval_secs: "300"
+          # The parent directory of the SSL certificate files that are automatically reloaded.
+          ssl_watch_path: certs
         initContainers:
           - name: init-auth-sidecar
             command:
@@ -401,7 +717,7 @@ The following only lists the fields that must be configured to enable mTLS with 
 
       !!! note
 
-            When the following certificate environment variables are configured, the secrets under `spec.sslCerts` in the cluster configuration file are ignored.
+            When the following certificate environment variables are configured, the Secrets under `spec.sslCerts` in the cluster configuration file are ignored.
 
       ```yaml title="nebula-operator_chart_configuration_file.yaml"
       ...
@@ -468,30 +784,30 @@ The following only lists the fields that must be configured to enable mTLS with 
           caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "ca.crt".
       ```
 
-      Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you've created a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you'll need to manually configure `caCert` field with `ca.crt`.
+      Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you create a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you need to change the value of the `caCert` field from `ca.crt` to `tls.crt`.
 
     #### `spec.sslCerts.insecureSkipVerify`
 
-    If an [IP Subject Alternative Name (SAN)](https://www.openssl.org/docs/man1.0.2/man5/x509v3_config.html) is not set for the certificates, regardless of whether certificates are passed in by creating a Secret or obtained locally by configuring NebulaGraph Operator's environment variables, you must set the value of `spec.sslCerts.insecureSkipVerify` to `true`.
+    The `insecureSkipVerify` field is used to determine whether the client verifies the server's certificate chain and hostname. The default value is `false`. 
 
+    It is recommended that you use the default value in production environments. In this case, you need to either specify the hostname or IP of the server in the `subjectAltName` field of the server's certificate or specify the [Subject Alternative Name (SAN)](https://www.openssl.org/docs/man1.0.2/man5/x509v3_config.html) of the server in the `spec.sslCerts.serverName` field. Otherwise, an error occurs when the client verifies the server's certificate chain and hostname. For more information, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
 
     Example:
 
     ```yaml title="cluster_configuration_file.yaml"
     spec:
       sslCerts:
-        insecureSkipVerify: true
+        insecureSkipVerify: false
+        serverName: managed-graph-http2.nebula
     ```
-
-    !!! note
-
-        - The `insecureSkipVerify` field is used to determine whether the client verifies the server's certificate chain and hostname. The default value is `false`. If set to `true`, the client does not verify the server's certificate chain and hostname.
-        - Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
-
+    
+    If you set the value of `insecureSkipVerify` to `true`, the client does not verify the server's certificate chain and hostname.
 
     #### `spec.<meta|graph|storage>.config`
 
     To enable mTLS between services (Graph, Meta, and Storage), add the following fields under the `spec.metad.config`, `spec.graphd.config`, and `spec.storaged.config` respectively in the cluster configuration file.
+
+<!-- for 3.8.x and snapchat version, which includes the ssl_server_SAN field -->
 
     ```yaml
     spec:
@@ -503,6 +819,8 @@ The following only lists the fields that must be configured to enable mTLS with 
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"
+          ssl_server_SAN: managed-graph-http2.nebula
+          ssl_watch_path: certs
       metad:
         config:
           ca_client_path: certs/root.crt
@@ -511,6 +829,8 @@ The following only lists the fields that must be configured to enable mTLS with 
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"
+          ssl_server_SAN: managed-graph-http2.nebula
+          ssl_watch_path: certs
       storaged:
         config:
           ca_client_path: certs/root.crt
@@ -519,14 +839,49 @@ The following only lists the fields that must be configured to enable mTLS with 
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"
+          ssl_server_SAN: managed-graph-http2.nebula
+          ssl_watch_path: certs
     ```
+
+<!-- for 3.7.x version, which excludes the ssl_server_SAN field
+
+    ```yaml
+    spec:
+      graph:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+          ssl_watch_path: certs
+      metad:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+          ssl_watch_path: certs
+      storaged:
+        config:
+          ca_client_path: certs/root.crt
+          ca_path: certs/root.crt
+          cert_path: certs/server.crt
+          key_path: certs/server.key
+          enable_meta_ssl: "true"
+          enable_storage_ssl: "true"
+          ssl_watch_path: certs
+    ``` 
+-->
 
     #### `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
     `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
 
-    - For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
-    - For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
+    For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
 
     Details about these fields are as follows:
 
@@ -596,6 +951,7 @@ The following only lists the fields that must be configured to enable mTLS with 
         mountPath: /usr/local/nebula/certs
       ```
 
+
 === "mTLS between the client and the Graph service"
 
     #### `spec.<meta|graph|storage>.config`
@@ -611,14 +967,14 @@ The following only lists the fields that must be configured to enable mTLS with 
           cert_path: certs/server.crt
           key_path: certs/server.key
           enable_graph_ssl: "true"
+          ssl_watch_path: certs
     ```
 
     #### `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
 
     `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts` fields are essential for implementing mTLS certificate online hot-reloading. 
 
-    - For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
-    - For the encryption scenario where the Graph service, Meta service, and Storage service need to be encrypted, configure these fields under `spec.graph.config`, `spec.storage.config`, and `spec.meta.config` respectively.
+    For the encryption scenario where only the Graph service needs to be encrypted, configure these fields under `spec.graph.config`. 
 
     Details about these fields are as follows:
 
@@ -695,7 +1051,7 @@ After applying the cluster configuration file by running `kubectl apply -f`, you
 
 !!! note
 
-    When mTLS is required for external clients to connect to the Graph service, you need to set the relevant SSL fields depending on different [clients](../../14.client/1.nebula-client.md). 
+    When mTLS is required for external clients to connect to the Graph service, you need to set the relevant SSL fields depending on different [clients](../../../14.client/1.nebula-client.md). 
 
 You can configure `spec.console` to start a NebulaGraph Console container in the cluster. For details, see [nebula-console](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/nebula_console.md#nebula-console).
 
@@ -740,8 +1096,8 @@ kubectl get secret --namespace=<namespace>
 
 ### Configure certifications
 
-Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains four subfields. These three fields `serverSecret`, `clientSecret`, and `caSecret` are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. 
-When you specify these three fields, Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod. The `autoMountServerCerts` must be set to `true` if you want to automatically mount the server certificate and private key into the Pod. The default value is `false`.
+NebulaGraph Operator provides the `sslCerts` field to specify the encrypted certificates. The `sslCerts` field contains four subfields. These three fields `serverSecret`, `clientSecret`, and `caSecret` are used to specify the Secret names of the NebulaGraph server certificate, client certificate, and CA certificate, respectively. 
+When you specify these three fields, NebulaGraph Operator reads the certificate content from the corresponding Secret and mounts it into the cluster's Pod. The `autoMountServerCerts` must be set to `true` if you want to automatically mount the server certificate and private key into the Pod. The default value is `false`.
 
 ```yaml
 sslCerts:
@@ -758,19 +1114,20 @@ sslCerts:
 
 The `serverCert` and `serverKey`, `clientCert` and `clientKey`, and `caCert` are used to specify the key names of the certificate and private key of the server Secret, the key names of the certificate and private key of the client Secret, and the key name of the CA Secret certificate. If you do not customize these field values, Operator defaults `serverCert` and `clientCert` to `tls.crt`, `serverKey` and `clientKey` to `tls.key`, and `caCert` to `ca.crt`. However, in the K8s cluster, the TLS type Secret uses `tls.crt` and `tls.key` as the default key names for the certificate and private key. Therefore, after creating the NebulaGraph cluster, you need to manually change the `caCert` field from `ca.crt` to `tls.crt` in the cluster configuration, so that the Operator can correctly read the content of the CA certificate. Before you customize these field values, you need to specify the key names of the certificate and private key in the Secret when creating it. For how to create a Secret with the key name specified, run the `kubectl create secret generic -h` command for help.
 
-You can use the `insecureSkipVerify` field to decide whether the client will verify the server's certificate chain and hostname. In production environments, it is recommended to set this to `false` to ensure the security of communication. If set to `true`, the client will not verify the server's certificate chain and hostname.
+The `insecureSkipVerify` field is used to determine whether the client verifies the server's certificate chain and hostname. The default value is `false`.
+
+It is recommended that you use the default value in production environments. In this case, you need to either specify the hostname or IP of the server in the `subjectAltName` field of the server's certificate or specify the [SAN](https://www.openssl.org/docs/man1.0.2/man5/x509v3_config.html) of the server in the `spec.sslCerts.serverName` field. Otherwise, an error occurs when the client verifies the server's certificate chain and hostname. For more information, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
 
 ```yaml
-sslCerts:
-  # Determines whether the client needs to verify the server's certificate chain and hostname when establishing an SSL connection. 
-  insecureSkipVerify: false 
+spec:
+  sslCerts:
+    insecureSkipVerify: false
+    serverName: managed-graph-http2.nebula
 ```
 
-!!! caution
+If you set the value of `insecureSkipVerify` to `true`, the client does not verify the server's certificate chain and hostname.
 
-    Make sure that you have added the hostname or IP of the server to the server's certificate's `subjectAltName` field before the `insecureSkipVerify` is set to `false`. If the hostname or IP of the server is not added, an error will occur when the client verifies the server's certificate chain and hostname. For details, see [openssl](https://kubernetes.io/docs/tasks/administer-cluster/certificates/#openssl).
-
-When the certificates are approaching expiration, they can be automatically updated by installing [cert-manager](https://cert-manager.io/docs/installation/supported-releases/). NebulaGraph will monitor changes to the certificate directory files, and once a change is detected, it will load the new certificate content into memory. 
+When the certificates are approaching expiration, they can be automatically updated by installing [cert-manager](https://cert-manager.io/docs/installation/supported-releases/). NebulaGraph will monitor changes to the certificate directory files, and once a change is detected, it will load the new certificate content into memory.
 
 ### Encryption strategies
 
@@ -794,6 +1151,11 @@ NebulaGraph offers three encryption strategies that you can choose and configure
       serverSecret: "server-cert"   # The Secret name of the server certificate and private key.
       clientSecret: "client-cert"   # The Secret name of the client certificate and private key.
       caSecret: "ca-cert"           # The Secret name of the CA certificate.
+      insecureSkipVerify: "false" # Whether the client verifies the server's certificate chain and hostname. Default is "false".
+      # If `insecureSkipVerify` is set to `false`,
+      # either specify the server's hostname or IP of the server in the `subjectAltName` field of the server's certificate, 
+      # or specify the Subject Alternative Name (SAN) of the server in the following `serverName` field.
+      serverName: managed-graph-http2.nebula # The SAN of the server.
     graphd:
       config:
         enable_ssl: "true"
@@ -823,6 +1185,7 @@ NebulaGraph offers three encryption strategies that you can choose and configure
       autoMountServerCerts: "true"  
       serverSecret: "server-cert"
       caSecret: "ca-cert"
+      insecureSkipVerify: "true"
     graphd:
       config:
         enable_graph_ssl: "true"
@@ -830,7 +1193,7 @@ NebulaGraph offers three encryption strategies that you can choose and configure
 
   !!! note
 
-        Because Operator doesn't need to call the Graph service through an interface, it's not necessary to set `clientSecret` in `sslCerts`.
+        Because NebulaGraph Operator doesn't need to call the Graph service through an interface, it's not necessary to set `clientSecret` in `sslCerts`.
 
 - Encryption of only Meta service communication
 
@@ -850,6 +1213,7 @@ NebulaGraph offers three encryption strategies that you can choose and configure
       serverSecret: "server-cert"
       clientSecret: "client-cert"
       caSecret: "ca-cert"
+      insecureSkipVerify: "true"
     graphd:
       config:
         enable_meta_ssl: "true"
@@ -890,9 +1254,11 @@ NebulaGraph offers three encryption strategies that you can choose and configure
   spec:
     sslCerts:
       autoMountServerCerts: "true"
-      serverSecret: "server-cert"  // The name of the server Certificate Secret.
-      clientSecret: "client-cert"  // The name of the client Certificate Secret.
-      caSecret: "ca-cert"          // The name of the CA Certificate Secret.
+      serverSecret: "server-cert"  # The name of the server Certificate Secret.
+      clientSecret: "client-cert"  # The name of the client Certificate Secret.
+      caSecret: "ca-cert"          # The name of the CA Certificate Secret.
+      insecureSkipVerify: "false"  # Whether the client verifies the server's certificate chain and hostname. Default is "false".
+      serverName: managed-graph-http2.nebula # The SAN of the server.
     graphd:
       config:
         enable_ssl: "true"
