--- a/docs-2.0/k8s-operator/1.introduction-to-nebula-operator.md
+++ b/docs-2.0/k8s-operator/1.introduction-to-nebula-operator.md
@@ -18,17 +18,18 @@ The following features are already available in NebulaGraph Operator:
 
 - **Cluster deployment and deletion**: NebulaGraph Operator simplifies the process of deploying and uninstalling clusters for users. NebulaGraph Operator allows you to quickly create, update, or delete a NebulaGraph cluster by simply providing the corresponding CR file. For more information, see [Install NebulaGraph Clusters](../k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md).
 
-- **Disaster Recovery Zones**: Supports evenly distributing Storage Pods across zones to facilitate disaster recovery. For more information, see [Create clusters with zones](../k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md).
+- **Disaster recovery zones**: Supports evenly distributing Storage Pods across zones to facilitate disaster recovery. For more information, see [Create clusters with zones](../k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md).
 
 - **Cluster scaling**: NebulaGraph Operator calls NebulaGraph's native scaling interfaces in a control loop to implement the scaling logic. You can simply perform scaling operations with YAML configurations and ensure the stability of data. For more information, see [Scale clusters](../k8s-operator/4.cluster-administration/4.3.scaling/4.3.1.resizing.md).
 
-- **Backup and Recovery**：NebulaGraph supports data backup and recovery. Users can use NebulaGraph Operator to backup the data of the NebulaGraph cluster to storage services that are compatible with the S3 protocol, and can also restore data to the cluster from the storage service. For details, see [Backup and restore using NebulaGraph Operator](../k8s-operator/4.cluster-administration/4.6.backup-and-restore.md).
+- **Backup and recovery**：NebulaGraph supports data backup and recovery. Users can use NebulaGraph Operator to backup the data of the NebulaGraph cluster to storage services, and can also restore data to the cluster from the storage service. For details, see [Backup and restore using NebulaGraph Operator](4.cluster-administration/4.6.backup-and-restore/4.6.0.overview.md).
 
-- **Cluster Upgrade**: NebulaGraph Operator supports cluster upgrading from version {{operator.upgrade_from}} to version {{operator.upgrade_to}}.
+- **Cluster upgrade**: NebulaGraph Operator supports cluster upgrading from version {{operator.upgrade_from}} to version {{operator.upgrade_to}}.
   
-- **Self-Healing**: NebulaGraph Operator calls interfaces provided by NebulaGraph clusters to dynamically sense cluster service status. Once an exception is detected, NebulaGraph Operator performs fault tolerance. For more information, see [Self-Healing](../k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md).
+- **Self-healing**: NebulaGraph Operator calls interfaces provided by NebulaGraph clusters to dynamically sense cluster service status. Once an exception is detected, NebulaGraph Operator performs fault tolerance. For more information, see [Self-Healing](../k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.1.self-healing.md).
   
-- **Balance Scheduling**: Based on the scheduler extension interface, the scheduler provided by NebulaGraph Operator evenly distributes Pods in a NebulaGraph cluster across all nodes.
+- **Balance scheduling**: Based on the scheduler extension interface, the scheduler provided by NebulaGraph Operator evenly distributes Pods in a NebulaGraph cluster across all nodes.
+
 
 ## Limitations
 
@@ -38,7 +39,7 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 | NebulaGraph   | NebulaGraph Operator |
 | ------------- | -------------------- |
-| 3.5.x ~ 3.7.0 | 1.5.0 ~ 1.7.x        |
+| 3.5.x ~ 3.7.x | 1.5.0 ~ 1.8.x        |
 | 3.0.0 ~ 3.4.1 | 1.3.0, 1.4.0 ~ 1.4.2 |
 | 3.0.0 ~ 3.3.x | 1.0.0, 1.1.0, 1.2.0  |
 | 2.5.x ~ 2.6.x | 0.9.0                |
@@ -51,4 +52,7 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 ## Release note
 
-[Release](https://github.com/vesoft-inc/nebula-operator/releases/tag/{{operator.tag}})
+[NebulaGraph Operator release notes](../20.appendix/release-notes/operator-release-note.md)
+
+[History releases](https://github.com/vesoft-inc/nebula-operator/releases/tag/{{operator.tag}})
+
